# deepussim

./: .gitignore  README.md  pyproject.toml
configs/: renderer.yaml  trajectory.yaml
docs/: data_collection.md
scripts/: make_synthetic_phantom.py  run_real_collection.py  run_scaleup.py  smoke_sim.py  view_sim.py
src/deepussim/: __init__.py  geometry.py
src/deepussim/assets/franka_fr3/: fr3.xml
src/deepussim/calib/: __init__.py  placement.py  registration.py  renderer_fit.py
src/deepussim/pipeline/: __init__.py  sampling.py  scaleup.py
src/deepussim/sim/: __init__.py  scene.py
src/deepussim/us/: __init__.py  renderer.py  reslice.py
tests/: test_geometry.py  test_placement.py  test_quaternion.py  test_renderer.py  test_reslice.py
